# linux_homework

./: README.md  path_to_sysfile
10/1/: file.txt  main  main.cc
10/2/: main.cpp
10/homework/1/: main  main.cpp
10/homework/2/: main  main.cpp
10/homework/3/: main  main.cpp
10/homework/4/: hello.txt  main  main.cpp
2/: convert_jpg_to_png  konv  monitoring  parall_convert
2/files/: 1.txt  2.txt
3/: .replace_title_file.swp  func  open  title  weather
3/4/: .test.swp  TYPESCRIPT  replace_title_file  script
3/4/1/: TEST.SH  n
3/test/: t
4/: .xml_to_java.xml.swp  .xml_to_java3.txt.swp  FILE.CPP  TEXT.TXT  xml_to_java.xml  xml_to_java2.xml  xml_to_java3.txt
5/: first.txt  forth  konspekt
5/3/: first.txt
6/: a.out  comp.cc  compiler_konsp  def.cc  define.cc  file.cc  main  ref.txt  task1.cc
6/include/: main.hh
8/1/: main  main.cc  main.hh
8/2/: main.cc
8/3/: main.cc  main.hh  meson.build
8/homework/1/: MakeFile  main  main.cc
8/homework/2/: MakeFile  main  main.cc  main.hh  text.txt
8/homework/3/: main  main.hh  meson.build
8/homework/3/src/: main.hh
9/1/: a.out  main.cc  main2.cc
9/2/: 1.cc  a.out
9/3/: .main.cc.swp  main  main.cc  test  test.cpp
9/4/: main  main.cc
